--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@ html, body, #wrapper {
 <body>
    <table id="wrapper">
       <tr>
-         <td><img src="IMG_1363.JPG" alt="" /></td>
+         <td><img src="M3.png" alt="" /></td>
       </tr>
    </table>
 </body>
